manga_db/webGUI/sass/style.scss
/* ... */
.button.is-nav-button:focus:not(:active), .button.is-nav-button.is-focused:not(:active) {
    box-shadow: none;//0 0 0 0.125em rgba(255, 255, 255, 0.25);
    background-color: $scheme-main-ter;  // recently clicked nav-button
}
.button.is-nav-button:focus, .button.is-nav-button.is-focused {
    border-color: transparent;
    color: $text;
}
.button.is-nav-button:hover, .button.is-nav-button.is-hovered {
    border: none;
    color: $text;
    background-color: $scheme-main-bis;
}
.button.is-nav-button:active, .button.is-nav-button.is-active {
    border-color: $scheme-invert-bis;
    color: $text;
}

// .img-responsive {
//     display: block;
//     max-width: 100%;
//     height: auto;
// }
.mdb-navbar-brand {
    font-size: 1.75rem;
}
// .mdb-nav {
//     display: flex;
//     flex-flow: row nowrap;
//     align-items: center;
//     z-index: 999; /* so pos fixed next/prev dont overlap */
// }
// .mdb-nav-right {
//     display: flex;
//     flex-flow: row nowrap;
//     flex-grow: 1;
//     justify-content: flex-end;
// }
// .page           { margin: 1rem auto 2rem auto; width: 100%;
//                   padding: 0.8em; }
// @media only screen and (min-width: 1200px) {
//     /* use full screen width on smaller devices but center on 3/4 for desktop */
//     .page {
//         width: 75%;
//     }
// }
.page-nav {
    position: fixed;
    top: 0%;
    height: 100%;
    display: flex;
    align-items: center;
    padding: 0 0.3em;
    font-size: 4em;
    font-weight: bold;
}
.page-nav:hover {
    color: #f34c4c;
    background-color: #7575750f;
}
#page-next {
    right: 0;
}
#page-prev {
    left: 0;
}

.book-info-table {
    //  Using @extend lets you share a set of CSS properties from one selector to another
    @extend .table;
    background-color: $body-background-color;
    color: $text;
    // sass allows nesting: nav { ul {..} } is the same as: nav ul {..}
    td, th {
        border: none;
        padding: 0.35em 0.5em;
    }

    th {
        color: $scheme-invert-ter;
    }
}
// .button-leftmost {
//     margin-left: 0;
// }
// .list-tag {
// 	position: relative;
// 	padding-right: 20px!important;
// }
// .list-tag-border {
// 	border: #22a7f0 1px solid;
// }
// .list-tag a {
// 	text-decoration: none!important;
// 	color: #fff!important;
// }
// input[type="checkbox"].mdb-checkboxes {
// 	/* input[type=checkbox], input[type=radio] { */
// 	vertical-align: middle;
// 	position: relative;
// 	bottom: 1px;
// 	margin: 0 3px 0 0;
// }
// .mdb-list-remove {
//     display: inline-block;
//     position: absolute;
//     top: 0;
//     bottom: 0;
//     vertical-align: middle;
//     right: 0;
//     text-align: center;
//     padding: 3px;
//     padding-top: 7px;
//     font-size: 0.8em;
//     border-left: 1px solid #22a7f0;
// }
// #mdb-list-add-btn {
//     font-size: 12px;
// }
// #list-dropdown-container {
//     display: inline-block;
// }
// /* Dropdown Button */
// .mdb-drop-btn {
//     	cursor: pointer;
// }

// /* Dropdown button on hover & focus */
// .mdb-drop-btn:hover, .mdb-drop-btn:focus {
//     background-color: #4c4c4c;
// }

// /* The container <div> - needed to position the dropdown content */
// .mdb-dropdown {
//     position: relative;
//     display: inline-block;
// }

// /* Dropdown Content (Hidden by Default) */
// .mdb-dropdown-content {
//     display: none;
//     position: absolute;
//     background-color: #333;
//     min-width: 160px;
//     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
//     z-index: 1;
//     /* limit height and add scrollbar with overflow auto */
//     overflow: auto;
//     max-height: 250px;
// }

// /* Links inside the dropdown */
// .mdb-dropdown-content a {
//     color: #fff;
//     padding: 3px 12px;
//     text-decoration: none;
//     display: block;
// }

// /* Change color of dropdown links on hover */
// .mdb-dropdown-content a:hover {background-color: #4c4c4c}
// /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
// .mdb-show {display:block;}

.kw-headline hr {
    display: block;
    margin-top: 0;
    margin-bottom: .5rem;
    margin-left: auto;
    margin-right: auto;
    border-style: inset;
    border-width: 1px;
    border-color: #fff;
}
.kw-headline span {
    margin-left: .25rem;
    font-size: 1.25rem;
    letter-spacing: 1.5px;
}
// .ext-info-row {
//     margin-bottom: 1.5rem;
// }
// .ext-info-container {
//     float: left;
//     width: 100%;
//     padding-left: .25rem;
// }
.ext-info-container hr {
    display: block;
    margin-top: .2rem;
    margin-bottom: .2rem;
    margin-left: auto;
    margin-right: auto;
    border-style: inset;
    border-width: 1px;
    border-color: #2196f3;
}
// .ext-info-inner {
//     font-size: .9rem;
//     font-weight: 400;
// }
.ext-info-title {
    font-size: 1.1rem;
}
/* ... */

